parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> OPEN_TAG declaration_list CLOSE_TAG
Rule 2     declaration_list -> declaration_list declaration
Rule 3     declaration_list -> declaration
Rule 4     declaration -> var_declaration
Rule 5     declaration -> fun_declaration
Rule 6     declaration -> header_declaration
Rule 7     declaration -> class_declaration
Rule 8     declaration -> print_stmt
Rule 9     declaration -> selection_stmt
Rule 10    declaration -> iteration_stmt
Rule 11    print_stmt -> print_stmt ECHO STRING SEMICOLON
Rule 12    print_stmt -> print_stmt ECHO ID SEMICOLON
Rule 13    print_stmt -> empty
Rule 14    header_declaration -> REQUIRE LPAREN STRING RPAREN SEMICOLON
Rule 15    header_declaration -> REQUIRE STRING SEMICOLON
Rule 16    class_declaration -> CLASS FUNCTION_NAME class_stmt
Rule 17    class_stmt -> LBLOCK attributes methods RBLOCK
Rule 18    class_stmt -> LBLOCK empty RBLOCK
Rule 19    class_stmt -> LBLOCK attributes RBLOCK
Rule 20    attributes -> attributes scope var_declaration
Rule 21    attributes -> scope var_declaration
Rule 22    methods -> methods scope fun_declaration
Rule 23    methods -> scope fun_declaration
Rule 24    scope -> PRIVATE
Rule 25    scope -> PUBLIC
Rule 26    scope -> PROTECTED
Rule 27    var_declaration -> ID SEMICOLON var_declaration
Rule 28    var_declaration -> ID SEMICOLON
Rule 29    var_declaration -> ID EQUAL NUMBER SEMICOLON var_declaration
Rule 30    var_declaration -> ID EQUAL NUMBER SEMICOLON
Rule 31    var_declaration -> ID EQUAL boolean SEMICOLON var_declaration
Rule 32    var_declaration -> ID EQUAL boolean SEMICOLON
Rule 33    var_declaration -> ID EQUAL ID SEMICOLON var_declaration
Rule 34    var_declaration -> ID EQUAL ID SEMICOLON
Rule 35    var_declaration -> AMPERSANT ID SEMICOLON var_declaration
Rule 36    var_declaration -> AMPERSANT ID SEMICOLON
Rule 37    fun_declaration -> FUNCTION FUNCTION_NAME LPAREN params RPAREN compount_stmt
Rule 38    params -> param_list
Rule 39    params -> empty
Rule 40    param_list -> param_list COMMA param
Rule 41    param_list -> param
Rule 42    param -> ID
Rule 43    param -> ID LBRACKET RBRACKET
Rule 44    compount_stmt -> LBLOCK print_stmt local_declarations print_stmt statement_list print_stmt RBLOCK
Rule 45    local_declarations -> local_declarations var_declaration
Rule 46    local_declarations -> empty
Rule 47    statement_list -> statement_list statement
Rule 48    statement_list -> empty
Rule 49    statement -> expression_stmt
Rule 50    statement -> compount_stmt
Rule 51    statement -> selection_stmt
Rule 52    statement -> iteration_stmt
Rule 53    statement -> return_stmt
Rule 54    expression_stmt -> expression SEMICOLON
Rule 55    expression_stmt -> SEMICOLON
Rule 56    selection_stmt -> IF LPAREN expression RPAREN statement
Rule 57    selection_stmt -> IF LPAREN expression RPAREN statement ELSE statement
Rule 58    selection_stmt -> SWITCH LPAREN var RPAREN statement
Rule 59    selection_stmt -> CASE NUMBER COLON statement BREAK SEMICOLON
Rule 60    selection_stmt -> DEFAULT COLON statement BREAK SEMICOLON
Rule 61    selection_stmt -> print_stmt
Rule 62    iteration_stmt -> FOR LPAREN var_declaration SEMICOLON expression SEMICOLON additive_expression RPAREN statement
Rule 63    iteration_stmt -> WHILE LPAREN expression RPAREN statement
Rule 64    iteration_stmt -> print_stmt
Rule 65    return_stmt -> RETURN SEMICOLON
Rule 66    return_stmt -> RETURN expression SEMICOLON
Rule 67    expression -> var EQUAL expression
Rule 68    expression -> simple_expression
Rule 69    expression -> var EQUAL AMPERSANT ID
Rule 70    var -> ID
Rule 71    var -> ID LBRACKET expression RBRACKET
Rule 72    simple_expression -> additive_expression relop additive_expression
Rule 73    simple_expression -> additive_expression
Rule 74    relop -> LESS
Rule 75    relop -> LESSEQUAL
Rule 76    relop -> GREATER
Rule 77    relop -> GREATEREQUAL
Rule 78    relop -> DEQUAL
Rule 79    relop -> ISEQUAL
Rule 80    additive_expression -> additive_expression addop term
Rule 81    additive_expression -> term
Rule 82    additive_expression -> term MINUSMINUS
Rule 83    additive_expression -> term PLUSPLUS
Rule 84    addop -> PLUS
Rule 85    addop -> MINUS
Rule 86    term -> term mulop factor
Rule 87    term -> factor
Rule 88    mulop -> TIMES
Rule 89    mulop -> DIVIDE
Rule 90    factor -> LPAREN expression RPAREN
Rule 91    factor -> var
Rule 92    factor -> call
Rule 93    factor -> NUMBER
Rule 94    factor -> boolean
Rule 95    call -> ID LPAREN args RPAREN
Rule 96    args -> args_list
Rule 97    args -> empty
Rule 98    args_list -> args_list COMMA expression
Rule 99    args_list -> expression
Rule 100   boolean -> TRUE
Rule 101   boolean -> FALSE
Rule 102   empty -> <empty>

Terminals, with rules where they appear

AMPERSANT            : 35 36 69
BREAK                : 59 60
CASE                 : 59
CLASS                : 16
CLOSE_TAG            : 1
COLON                : 59 60
COMMA                : 40 98
DEFAULT              : 60
DEQUAL               : 78
DIVIDE               : 89
ECHO                 : 11 12
ELSE                 : 57
EQUAL                : 29 30 31 32 33 34 67 69
FALSE                : 101
FOR                  : 62
FUNCTION             : 37
FUNCTION_NAME        : 16 37
GREATER              : 76
GREATEREQUAL         : 77
ID                   : 12 27 28 29 30 31 32 33 33 34 34 35 36 42 43 69 70 71 95
IF                   : 56 57
ISEQUAL              : 79
LBLOCK               : 17 18 19 44
LBRACKET             : 43 71
LESS                 : 74
LESSEQUAL            : 75
LPAREN               : 14 37 56 57 58 62 63 90 95
MINUS                : 85
MINUSMINUS           : 82
NUMBER               : 29 30 59 93
OPEN_TAG             : 1
PLUS                 : 84
PLUSPLUS             : 83
PRIVATE              : 24
PROTECTED            : 26
PUBLIC               : 25
RBLOCK               : 17 18 19 44
RBRACKET             : 43 71
REQUIRE              : 14 15
RETURN               : 65 66
RPAREN               : 14 37 56 57 58 62 63 90 95
SEMICOLON            : 11 12 14 15 27 28 29 30 31 32 33 34 35 36 54 55 59 60 62 62 65 66
STRING               : 11 14 15
SWITCH               : 58
TIMES                : 88
TRUE                 : 100
WHILE                : 63
error                : 

Nonterminals, with rules where they appear

additive_expression  : 62 72 72 73 80
addop                : 80
args                 : 95
args_list            : 96 98
attributes           : 17 19 20
boolean              : 31 32 94
call                 : 92
class_declaration    : 7
class_stmt           : 16
compount_stmt        : 37 50
declaration          : 2 3
declaration_list     : 1 2
empty                : 13 18 39 46 48 97
expression           : 54 56 57 62 63 66 67 71 90 98 99
expression_stmt      : 49
factor               : 86 87
fun_declaration      : 5 22 23
header_declaration   : 6
iteration_stmt       : 10 52
local_declarations   : 44 45
methods              : 17 22
mulop                : 86
param                : 40 41
param_list           : 38 40
params               : 37
print_stmt           : 8 11 12 44 44 44 61 64
program              : 0
relop                : 72
return_stmt          : 53
scope                : 20 21 22 23
selection_stmt       : 9 51
simple_expression    : 68
statement            : 47 56 57 57 58 59 60 62 63
statement_list       : 44 47
term                 : 80 81 82 83 86
var                  : 58 67 69 91
var_declaration      : 4 20 21 27 29 31 33 35 45 62

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . OPEN_TAG declaration_list CLOSE_TAG

    OPEN_TAG        shift and go to state 2

    program                        shift and go to state 1

state 1

    (0) S' -> program .



state 2

    (1) program -> OPEN_TAG . declaration_list CLOSE_TAG
    (2) declaration_list -> . declaration_list declaration
    (3) declaration_list -> . declaration
    (4) declaration -> . var_declaration
    (5) declaration -> . fun_declaration
    (6) declaration -> . header_declaration
    (7) declaration -> . class_declaration
    (8) declaration -> . print_stmt
    (9) declaration -> . selection_stmt
    (10) declaration -> . iteration_stmt
    (27) var_declaration -> . ID SEMICOLON var_declaration
    (28) var_declaration -> . ID SEMICOLON
    (29) var_declaration -> . ID EQUAL NUMBER SEMICOLON var_declaration
    (30) var_declaration -> . ID EQUAL NUMBER SEMICOLON
    (31) var_declaration -> . ID EQUAL boolean SEMICOLON var_declaration
    (32) var_declaration -> . ID EQUAL boolean SEMICOLON
    (33) var_declaration -> . ID EQUAL ID SEMICOLON var_declaration
    (34) var_declaration -> . ID EQUAL ID SEMICOLON
    (35) var_declaration -> . AMPERSANT ID SEMICOLON var_declaration
    (36) var_declaration -> . AMPERSANT ID SEMICOLON
    (37) fun_declaration -> . FUNCTION FUNCTION_NAME LPAREN params RPAREN compount_stmt
    (14) header_declaration -> . REQUIRE LPAREN STRING RPAREN SEMICOLON
    (15) header_declaration -> . REQUIRE STRING SEMICOLON
    (16) class_declaration -> . CLASS FUNCTION_NAME class_stmt
    (11) print_stmt -> . print_stmt ECHO STRING SEMICOLON
    (12) print_stmt -> . print_stmt ECHO ID SEMICOLON
    (13) print_stmt -> . empty
    (56) selection_stmt -> . IF LPAREN expression RPAREN statement
    (57) selection_stmt -> . IF LPAREN expression RPAREN statement ELSE statement
    (58) selection_stmt -> . SWITCH LPAREN var RPAREN statement
    (59) selection_stmt -> . CASE NUMBER COLON statement BREAK SEMICOLON
    (60) selection_stmt -> . DEFAULT COLON statement BREAK SEMICOLON
    (61) selection_stmt -> . print_stmt
    (62) iteration_stmt -> . FOR LPAREN var_declaration SEMICOLON expression SEMICOLON additive_expression RPAREN statement
    (63) iteration_stmt -> . WHILE LPAREN expression RPAREN statement
    (64) iteration_stmt -> . print_stmt
    (102) empty -> .

  ! shift/reduce conflict for ID resolved as shift
  ! shift/reduce conflict for AMPERSANT resolved as shift
  ! shift/reduce conflict for FUNCTION resolved as shift
  ! shift/reduce conflict for REQUIRE resolved as shift
  ! shift/reduce conflict for CLASS resolved as shift
  ! shift/reduce conflict for IF resolved as shift
  ! shift/reduce conflict for SWITCH resolved as shift
  ! shift/reduce conflict for CASE resolved as shift
  ! shift/reduce conflict for DEFAULT resolved as shift
  ! shift/reduce conflict for FOR resolved as shift
  ! shift/reduce conflict for WHILE resolved as shift
    ID              shift and go to state 12
    AMPERSANT       shift and go to state 13
    FUNCTION        shift and go to state 14
    REQUIRE         shift and go to state 15
    CLASS           shift and go to state 16
    IF              shift and go to state 18
    SWITCH          shift and go to state 19
    CASE            shift and go to state 20
    DEFAULT         shift and go to state 21
    FOR             shift and go to state 22
    WHILE           shift and go to state 23
    ECHO            reduce using rule 102 (empty -> .)
    CLOSE_TAG       reduce using rule 102 (empty -> .)

  ! ID              [ reduce using rule 102 (empty -> .) ]
  ! AMPERSANT       [ reduce using rule 102 (empty -> .) ]
  ! FUNCTION        [ reduce using rule 102 (empty -> .) ]
  ! REQUIRE         [ reduce using rule 102 (empty -> .) ]
  ! CLASS           [ reduce using rule 102 (empty -> .) ]
  ! IF              [ reduce using rule 102 (empty -> .) ]
  ! SWITCH          [ reduce using rule 102 (empty -> .) ]
  ! CASE            [ reduce using rule 102 (empty -> .) ]
  ! DEFAULT         [ reduce using rule 102 (empty -> .) ]
  ! FOR             [ reduce using rule 102 (empty -> .) ]
  ! WHILE           [ reduce using rule 102 (empty -> .) ]

    declaration_list               shift and go to state 3
    declaration                    shift and go to state 4
    var_declaration                shift and go to state 5
    fun_declaration                shift and go to state 6
    header_declaration             shift and go to state 7
    class_declaration              shift and go to state 8
    print_stmt                     shift and go to state 9
    selection_stmt                 shift and go to state 10
    iteration_stmt                 shift and go to state 11
    empty                          shift and go to state 17

state 3

    (1) program -> OPEN_TAG declaration_list . CLOSE_TAG
    (2) declaration_list -> declaration_list . declaration
    (4) declaration -> . var_declaration
    (5) declaration -> . fun_declaration
    (6) declaration -> . header_declaration
    (7) declaration -> . class_declaration
    (8) declaration -> . print_stmt
    (9) declaration -> . selection_stmt
    (10) declaration -> . iteration_stmt
    (27) var_declaration -> . ID SEMICOLON var_declaration
    (28) var_declaration -> . ID SEMICOLON
    (29) var_declaration -> . ID EQUAL NUMBER SEMICOLON var_declaration
    (30) var_declaration -> . ID EQUAL NUMBER SEMICOLON
    (31) var_declaration -> . ID EQUAL boolean SEMICOLON var_declaration
    (32) var_declaration -> . ID EQUAL boolean SEMICOLON
    (33) var_declaration -> . ID EQUAL ID SEMICOLON var_declaration
    (34) var_declaration -> . ID EQUAL ID SEMICOLON
    (35) var_declaration -> . AMPERSANT ID SEMICOLON var_declaration
    (36) var_declaration -> . AMPERSANT ID SEMICOLON
    (37) fun_declaration -> . FUNCTION FUNCTION_NAME LPAREN params RPAREN compount_stmt
    (14) header_declaration -> . REQUIRE LPAREN STRING RPAREN SEMICOLON
    (15) header_declaration -> . REQUIRE STRING SEMICOLON
    (16) class_declaration -> . CLASS FUNCTION_NAME class_stmt
    (11) print_stmt -> . print_stmt ECHO STRING SEMICOLON
    (12) print_stmt -> . print_stmt ECHO ID SEMICOLON
    (13) print_stmt -> . empty
    (56) selection_stmt -> . IF LPAREN expression RPAREN statement
    (57) selection_stmt -> . IF LPAREN expression RPAREN statement ELSE statement
    (58) selection_stmt -> . SWITCH LPAREN var RPAREN statement
    (59) selection_stmt -> . CASE NUMBER COLON statement BREAK SEMICOLON
    (60) selection_stmt -> . DEFAULT COLON statement BREAK SEMICOLON
    (61) selection_stmt -> . print_stmt
    (62) iteration_stmt -> . FOR LPAREN var_declaration SEMICOLON expression SEMICOLON additive_expression RPAREN statement
    (63) iteration_stmt -> . WHILE LPAREN expression RPAREN statement
    (64) iteration_stmt -> . print_stmt
    (102) empty -> .

  ! shift/reduce conflict for CLOSE_TAG resolved as shift
  ! shift/reduce conflict for ID resolved as shift
  ! shift/reduce conflict for AMPERSANT resolved as shift
  ! shift/reduce conflict for FUNCTION resolved as shift
  ! shift/reduce conflict for REQUIRE resolved as shift
  ! shift/reduce conflict for CLASS resolved as shift
  ! shift/reduce conflict for IF resolved as shift
  ! shift/reduce conflict for SWITCH resolved as shift
  ! shift/reduce conflict for CASE resolved as shift
  ! shift/reduce conflict for DEFAULT resolved as shift
  ! shift/reduce conflict for FOR resolved as shift
  ! shift/reduce conflict for WHILE resolved as shift
    CLOSE_TAG       shift and go to state 24
    ID              shift and go to state 12
    AMPERSANT       shift and go to state 13
    FUNCTION        shift and go to state 14
    REQUIRE         shift and go to state 15
    CLASS           shift and go to state 16
    IF              shift and go to state 18
    SWITCH          shift and go to state 19
    CASE            shift and go to state 20
    DEFAULT         shift and go to state 21
    FOR             shift and go to state 22
    WHILE           shift and go to state 23
    ECHO            reduce using rule 102 (empty -> .)

  ! CLOSE_TAG       [ reduce using rule 102 (empty -> .) ]
  ! ID              [ reduce using rule 102 (empty -> .) ]
  ! AMPERSANT       [ reduce using rule 102 (empty -> .) ]
  ! FUNCTION        [ reduce using rule 102 (empty -> .) ]
  ! REQUIRE         [ reduce using rule 102 (empty -> .) ]
  ! CLASS           [ reduce using rule 102 (empty -> .) ]
  ! IF              [ reduce using rule 102 (empty -> .) ]
  ! SWITCH          [ reduce using rule 102 (empty -> .) ]
  ! CASE            [ reduce using rule 102 (empty -> .) ]
  ! DEFAULT         [ reduce using rule 102 (empty -> .) ]
  ! FOR             [ reduce using rule 102 (empty -> .) ]
  ! WHILE           [ reduce using rule 102 (empty -> .) ]

    declaration                    shift and go to state 25
    var_declaration                shift and go to state 5
    fun_declaration                shift and go to state 6
    header_declaration             shift and go to state 7
    class_declaration              shift and go to state 8
    print_stmt                     shift and go to state 9
    selection_stmt                 shift and go to state 10
    iteration_stmt                 shift and go to state 11
    empty                          shift and go to state 17

state 4

    (3) declaration_list -> declaration .

    CLOSE_TAG       reduce using rule 3 (declaration_list -> declaration .)
    ID              reduce using rule 3 (declaration_list -> declaration .)
    AMPERSANT       reduce using rule 3 (declaration_list -> declaration .)
    FUNCTION        reduce using rule 3 (declaration_list -> declaration .)
    REQUIRE         reduce using rule 3 (declaration_list -> declaration .)
    CLASS           reduce using rule 3 (declaration_list -> declaration .)
    IF              reduce using rule 3 (declaration_list -> declaration .)
    SWITCH          reduce using rule 3 (declaration_list -> declaration .)
    CASE            reduce using rule 3 (declaration_list -> declaration .)
    DEFAULT         reduce using rule 3 (declaration_list -> declaration .)
    FOR             reduce using rule 3 (declaration_list -> declaration .)
    WHILE           reduce using rule 3 (declaration_list -> declaration .)
    ECHO            reduce using rule 3 (declaration_list -> declaration .)


state 5

    (4) declaration -> var_declaration .

    CLOSE_TAG       reduce using rule 4 (declaration -> var_declaration .)
    ID              reduce using rule 4 (declaration -> var_declaration .)
    AMPERSANT       reduce using rule 4 (declaration -> var_declaration .)
    FUNCTION        reduce using rule 4 (declaration -> var_declaration .)
    REQUIRE         reduce using rule 4 (declaration -> var_declaration .)
    CLASS           reduce using rule 4 (declaration -> var_declaration .)
    IF              reduce using rule 4 (declaration -> var_declaration .)
    SWITCH          reduce using rule 4 (declaration -> var_declaration .)
    CASE            reduce using rule 4 (declaration -> var_declaration .)
    DEFAULT         reduce using rule 4 (declaration -> var_declaration .)
    FOR             reduce using rule 4 (declaration -> var_declaration .)
    WHILE           reduce using rule 4 (declaration -> var_declaration .)
    ECHO            reduce using rule 4 (declaration -> var_declaration .)


state 6

    (5) declaration -> fun_declaration .

    CLOSE_TAG       reduce using rule 5 (declaration -> fun_declaration .)
    ID              reduce using rule 5 (declaration -> fun_declaration .)
    AMPERSANT       reduce using rule 5 (declaration -> fun_declaration .)
    FUNCTION        reduce using rule 5 (declaration -> fun_declaration .)
    REQUIRE         reduce using rule 5 (declaration -> fun_declaration .)
    CLASS           reduce using rule 5 (declaration -> fun_declaration .)
    IF              reduce using rule 5 (declaration -> fun_declaration .)
    SWITCH          reduce using rule 5 (declaration -> fun_declaration .)
    CASE            reduce using rule 5 (declaration -> fun_declaration .)
    DEFAULT         reduce using rule 5 (declaration -> fun_declaration .)
    FOR             reduce using rule 5 (declaration -> fun_declaration .)
    WHILE           reduce using rule 5 (declaration -> fun_declaration .)
    ECHO            reduce using rule 5 (declaration -> fun_declaration .)


state 7

    (6) declaration -> header_declaration .

    CLOSE_TAG       reduce using rule 6 (declaration -> header_declaration .)
    ID              reduce using rule 6 (declaration -> header_declaration .)
    AMPERSANT       reduce using rule 6 (declaration -> header_declaration .)
    FUNCTION        reduce using rule 6 (declaration -> header_declaration .)
    REQUIRE         reduce using rule 6 (declaration -> header_declaration .)
    CLASS           reduce using rule 6 (declaration -> header_declaration .)
    IF              reduce using rule 6 (declaration -> header_declaration .)
    SWITCH          reduce using rule 6 (declaration -> header_declaration .)
    CASE            reduce using rule 6 (declaration -> header_declaration .)
    DEFAULT         reduce using rule 6 (declaration -> header_declaration .)
    FOR             reduce using rule 6 (declaration -> header_declaration .)
    WHILE           reduce using rule 6 (declaration -> header_declaration .)
    ECHO            reduce using rule 6 (declaration -> header_declaration .)


state 8

    (7) declaration -> class_declaration .

    CLOSE_TAG       reduce using rule 7 (declaration -> class_declaration .)
    ID              reduce using rule 7 (declaration -> class_declaration .)
    AMPERSANT       reduce using rule 7 (declaration -> class_declaration .)
    FUNCTION        reduce using rule 7 (declaration -> class_declaration .)
    REQUIRE         reduce using rule 7 (declaration -> class_declaration .)
    CLASS           reduce using rule 7 (declaration -> class_declaration .)
    IF              reduce using rule 7 (declaration -> class_declaration .)
    SWITCH          reduce using rule 7 (declaration -> class_declaration .)
    CASE            reduce using rule 7 (declaration -> class_declaration .)
    DEFAULT         reduce using rule 7 (declaration -> class_declaration .)
    FOR             reduce using rule 7 (declaration -> class_declaration .)
    WHILE           reduce using rule 7 (declaration -> class_declaration .)
    ECHO            reduce using rule 7 (declaration -> class_declaration .)


state 9

    (8) declaration -> print_stmt .
    (11) print_stmt -> print_stmt . ECHO STRING SEMICOLON
    (12) print_stmt -> print_stmt . ECHO ID SEMICOLON
    (61) selection_stmt -> print_stmt .
    (64) iteration_stmt -> print_stmt .

  ! shift/reduce conflict for ECHO resolved as shift
  ! reduce/reduce conflict for CLOSE_TAG resolved using rule 8 (declaration -> print_stmt .)
  ! reduce/reduce conflict for ID resolved using rule 8 (declaration -> print_stmt .)
  ! reduce/reduce conflict for AMPERSANT resolved using rule 8 (declaration -> print_stmt .)
  ! reduce/reduce conflict for FUNCTION resolved using rule 8 (declaration -> print_stmt .)
  ! reduce/reduce conflict for REQUIRE resolved using rule 8 (declaration -> print_stmt .)
  ! reduce/reduce conflict for CLASS resolved using rule 8 (declaration -> print_stmt .)
  ! reduce/reduce conflict for IF resolved using rule 8 (declaration -> print_stmt .)
  ! reduce/reduce conflict for SWITCH resolved using rule 8 (declaration -> print_stmt .)
  ! reduce/reduce conflict for CASE resolved using rule 8 (declaration -> print_stmt .)
  ! reduce/reduce conflict for DEFAULT resolved using rule 8 (declaration -> print_stmt .)
  ! reduce/reduce conflict for FOR resolved using rule 8 (declaration -> print_stmt .)
  ! reduce/reduce conflict for WHILE resolved using rule 8 (declaration -> print_stmt .)
  ! shift/reduce conflict for ECHO resolved as shift
  ! reduce/reduce conflict for CLOSE_TAG resolved using rule 8 (declaration -> print_stmt .)
  ! reduce/reduce conflict for ID resolved using rule 8 (declaration -> print_stmt .)
  ! reduce/reduce conflict for AMPERSANT resolved using rule 8 (declaration -> print_stmt .)
  ! reduce/reduce conflict for FUNCTION resolved using rule 8 (declaration -> print_stmt .)
  ! reduce/reduce conflict for REQUIRE resolved using rule 8 (declaration -> print_stmt .)
  ! reduce/reduce conflict for CLASS resolved using rule 8 (declaration -> print_stmt .)
  ! reduce/reduce conflict for IF resolved using rule 8 (declaration -> print_stmt .)
  ! reduce/reduce conflict for SWITCH resolved using rule 8 (declaration -> print_stmt .)
  ! reduce/reduce conflict for CASE resolved using rule 8 (declaration -> print_stmt .)
  ! reduce/reduce conflict for DEFAULT resolved using rule 8 (declaration -> print_stmt .)
  ! reduce/reduce conflict for FOR resolved using rule 8 (declaration -> print_stmt .)
  ! reduce/reduce conflict for WHILE resolved using rule 8 (declaration -> print_stmt .)
  ! shift/reduce conflict for ECHO resolved as shift
    CLOSE_TAG       reduce using rule 8 (declaration -> print_stmt .)
    ID              reduce using rule 8 (declaration -> print_stmt .)
    AMPERSANT       reduce using rule 8 (declaration -> print_stmt .)
    FUNCTION        reduce using rule 8 (declaration -> print_stmt .)
    REQUIRE         reduce using rule 8 (declaration -> print_stmt .)
    CLASS           reduce using rule 8 (declaration -> print_stmt .)
    IF              reduce using rule 8 (declaration -> print_stmt .)
    SWITCH          reduce using rule 8 (declaration -> print_stmt .)
    CASE            reduce using rule 8 (declaration -> print_stmt .)
    DEFAULT         reduce using rule 8 (declaration -> print_stmt .)
    FOR             reduce using rule 8 (declaration -> print_stmt .)
    WHILE           reduce using rule 8 (declaration -> print_stmt .)
    ECHO            shift and go to state 26
